// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateOrUpdateReplyRequest attaches a reply request to an article 1`] = `
Object {
  "CreateOrUpdateReplyRequest": Object {
    "id": "createReplyRequestTest1",
    "replyRequestCount": 2,
    "replyRequests": Array [
      Object {
        "reason": "気になります",
        "userId": "test",
      },
    ],
    "requestedForReply": true,
  },
}
`;

exports[`CreateOrUpdateReplyRequest can update reason of a previously submitted reply request 1`] = `
Object {
  "CreateOrUpdateReplyRequest": Object {
    "id": "createReplyRequestTest1",
    "replyRequestCount": 2,
    "replyRequests": Array [
      Object {
        "reason": "New reason",
        "userId": "test",
      },
    ],
    "requestedForReply": true,
  },
}
`;

exports[`CreateOrUpdateReplyRequest inserts blocked reply request without updating article count 1`] = `
Object {
  "CreateOrUpdateReplyRequest": Object {
    "id": "createReplyRequestTest1",
    "replyRequestCount": 1,
    "replyRequests": Array [
      Object {
        "reason": "Some unwelcomed ads here",
        "userId": "iAmBlocked",
      },
    ],
    "requestedForReply": true,
  },
}
`;
